# uefi_helper

./: Cargo.toml
protocols/efi_loaded_image/: efi_loaded_image.rs  efi_loaded_image_device_path.rs
protocols/media/: simple_file_system.rs
src/: lib.rs  protocols.rs
src/protocols/: efi_loaded_image.rs
src/protocols/console/: absolute_pointer.rs  graphic_output.rs  pointer.rs  serial_io.rs  text_input.rs  text_input_ex.rs  text_output.rs
src/protocols/efi_loaded_image/: efi_loaded_image.rs  efi_loaded_image_device_path.rs
src/protocols/media/: file.rs  load_file.rs  load_file2.rs  mod.rs  simple_file_system.rs
