[package]
name = "uefi_helper"
version = "5.1.0"

description = "Improve uefi interaction"
keywords = [
        "boot",
        "efi",
        "firmware",
        "specification",
        "uefi",
]
rust-version = "1.83"

[dependencies]
# Required setup to build as part of rustc.
compiler_builtins = { version = '0.1.0', optional = true }
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
lib_efi = { git = "https://github.com/macadelic80/lib_efi" }

# [features]
# # No-op for backwards compatibility.
# efiapi = []
# # Maps to `native` for backwards compatibility.
# examples = ['native']
# # We feature-gate all native code, since it will not link correctly, unless you
# # use a UEFI target configuration. To make `cargo test` work, we exclude all
# # these from normal runs.
# native = []
# rustc-dep-of-std = ['compiler_builtins/rustc-dep-of-std', 'core']
